Upgrade to java 11
Makes this project linux only requires user to setup openjfx :(
Should move this from jvm/javafx to scalajs/html canvas.